<?xml version="1.0"?>
<package format="3">
  <name>e100_description</name>
  <version>0.1.0</version>
  <description>URDF description of the RIA E-100 robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- Optionally for testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ✅ 이 부분이 반드시 있어야 ROS 2 패키지로 등록됩니다 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

