<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_ros2</name>
  <version>0.0.1</version>
  <description>Odometry fusion node (encoder + IMU) with IMU serial reader.</description>
  <maintainer email="uoeee@todo.todo">uoeee</maintainer>
  <license>Apache-2.0</license>

  <!-- (선택) 테스트 도구 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend> <!-- ✅ pyserial -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

